src/test/ui/const-generics/foreign-item-const-parameter.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/foreign-item-const-parameter.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0044]: foreign items may not have const parameters
  --> $DIR/foreign-item-const-parameter.rs:5:5
   |
LL |     fn foo<const X: usize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ can't have const parameters
   |
   = help: replace the const parameters with concrete consts

error[E0044]: foreign items may not have type or const parameters
  --> $DIR/foreign-item-const-parameter.rs:7:5
   |
LL |     fn bar<T, const X: usize>(_: T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't have type or const parameters
   |
   = help: replace the type or const parameters with concrete types or consts

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0044`.
